# code-that-fits-in-your-head

./: README.md
.github/workflows/: lint.yml  test-chapter13.yml  test-chapter5.yml
chapter13/: README.md  pyproject.toml
chapter13/src/chapter13/: README.md  __init__.py  main.py
chapter5/: README.md  pyproject.toml
chapter5/src/chapter5/: __init__.py  main.py  test_main.py
