[project]
name = "chapter13"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kazuki Kijima", email = "kazukiyoshida96@gmail.com" }
]
dependencies = [
    "pytest>=8.3.1",
    "pydantic>=2.8.2",
    "pytest-mock>=3.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chapter13"]
