[project]
name = "chapter5"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kazuki Kijima", email = "kazukiyoshida96@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "pytest>=8.2.2",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chapter5"]
